[metadata]
name = wagtail-altstreamfield
version = 0.0.1
description = An alternative implementation of the Wagtail StreamField.
long_description = file: README.md
url = https://github.com/didorothy/wagtail-altstreamfield
author = David Dorothy
author_email = didorothy@gmail.com
license = BSD-2-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Intendted Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: